# luna_test_task

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_RU.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.reports/: junit.xml
.reports/coverage/: cobertura.xml
migrations/: env.py
migrations/versions/: 0001_init.py
src/: main.py  seed.py
src/api/dependencies/: __init__.py  auth.py  database.py  services.py
src/api/middleware/: __init__.py  exception_handlers.py
src/api/v1/: buildings.py  organizations.py  router.py
src/core/: config.py
src/domain/exceptions/: __init__.py  base.py  custom.py
src/domain/interfaces/: __init__.py  repositories.py
src/domain/models/: __init__.py  activity.py  base.py  building.py  organization.py
src/domain/schemas/: __init__.py  activity.py  building.py  geo.py  organization.py  pagination.py
src/infrastructure/database/: __init__.py  session.py
src/infrastructure/repositories/: __init__.py  activity.py  base.py  building.py  organization.py
src/services/: __init__.py  building.py  organization.py  pagination.py
tests/: conftest.py
tests/integration/: test_buildings_api.py  test_organizations_api.py
tests/unit/: test_building_service.py  test_config.py  test_organization_service.py
